add new blog post

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -26,16 +26,15 @@
         {{- end -}}
     {{- end -}}
     </title>
-    <meta name="description" content="
-    {{- block "description" . -}}
-        {{- if .Params.seo.meta_description -}}
-            {{- .Params.seo.meta_description -}}
-        {{- else if .Description -}}
-            {{- .Description -}}
-        {{- else -}}
-            {{- .Summary | truncate 250 -}}
-        {{- end -}}
-    {{- end -}}"></meta>
+    {{ $desc := "" }}
+    {{- if .Params.seo.meta_description -}}
+        {{- $desc = .Params.seo.meta_description -}}
+    {{- else if .Description -}}
+        {{- $desc = .Description -}}
+    {{- else -}}
+        {{- $desc = .Summary | truncate 250 -}}
+    {{- end -}}
+    <meta name="description" content="{{ $desc }}"></meta>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     {{- block "social-meta" . -}}
