--- a/layouts/partials/forms/safeco-scripts.html
+++ b/layouts/partials/forms/safeco-scripts.html
@@ -61,9 +61,8 @@
                 document.getElementById('subMenuUmbrella').selected = true;
                 break;
             case 'landlordprotection':
-                document.getElementById(
-                    'subMenuLandlordProtection',
-                ).selected = true;
+                document.getElementById('subMenuLandlordProtection').selected =
+                    true;
                 break;
             default:
                 document.getElementById('subMenuAuto').selected = true;
