make CTA less "salesy" + add featured image to new blog

--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -195,10 +195,9 @@
                             ></div>
                         {{ end }}
                         <div class="heading">
-                            <div class="title">GET A FREE QUOTE</div>
+                            <div class="title">SCHEDULE A FREE CONSULTATION</div>
                             <div class="subtitle">
-                                Contact us today to get a free quote on your
-                                insurance plan
+                                Contact us today to expert advice concerning your insurance needs
                             </div>
                         </div>
                         <form method="GET">
