--- a/layouts/shortcodes/quote-block.html
+++ b/layouts/shortcodes/quote-block.html
@@ -3,7 +3,7 @@
     style="margin: 30px 0; background-image: url({{ $.Page.Site.Params.cloudinary_url }}{{ $.Page.Params.featured_image }})"
 >
     <div class="image-overlay"></div>
-    <div class="quote-box-heading">Get a free quote</div>
+    <div class="quote-box-heading">Schedule a free consultation</div>
     <div class="quote-box-text">Save money today</div>
     <div class="blog-quote-box-form"></div>
 </div>
