--- a/layouts/index.html
+++ b/layouts/index.html
@@ -25,7 +25,7 @@
                 >
                     <div class="form-block homepage" style="">
                         <!-- style="background: #333333; color: white; margin: -30px -30px 40px -30px; padding: 30px;" -->
-                        <h1 class="heading">GET A FREE QUOTE</h1>
+                        <h1 class="heading">SCHEDULE A FREE CONSULTATION</h1>
                         <form method="GET">
                             <div class="control">
                                 <label class="overlay-label" for="banner_name"
